--- a/.env.production
+++ b/.env.production
@@ -1,8 +1,8 @@
-STRIPE_PUBLISHABLE_KEY=pk_live_XXXxxx
+STRIPE_PUBLISHABLE_KEY=pk_test_97bjS7qTp57J7tGXFfpqiKRR
 
-PAYMENT_SERVER_URL=https://mypaymentserver.com/
+PAYMENT_SERVER_URL=https://thanak.com/
 
-FIREBASE_API_KEY=apiKey
-FIREBASE_AUTH_DOMAIN=projectId.firebaseapp.com
-FIREBASE_DATABASE_URL=https://databaseName.firebaseio.com
-FIREBASE_STORAGE_BUCKET=bucket.appspot.com
+FIREBASE_API_KEY=AIzaSyAN6WBYakfN6QVQpRsd0xEIdKYyYQUlZTk
+FIREBASE_AUTH_DOMAIN=education-charity.firebaseapp.com
+FIREBASE_DATABASE_URL=https://education-charity.firebaseio.com
+FIREBASE_STORAGE_BUCKET=education-charity.appspot.com
