--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "open-crowd-fund",
-  "description": "Open Crowd Fund as open source alternative to crowd fund your own projects.",
+  "name": "educate-the-populous",
+  "description": " this is a hype site for a new charite based on teaching the undereducated using unused puplic resources.",
   "version": "1.0.0",
-  "author": "Robin Wieruch <wrobin@gmx.net>",
+  "author": "Philip Bankier",
   "dependencies": {
     "axios": "^0.16.2",
     "currency-symbol-map": "^4.0.3",
@@ -21,10 +21,6 @@
     "react-syntax-highlighter": "^5.7.1",
     "typography-theme-lincoln": "^0.15.11"
   },
-  "keywords": [
-    "open crowd fund alternative"
-  ],
-  "license": "MIT",
   "main": "n/a",
   "scripts": {
     "build": "gatsby build",
